...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PpG-Zw-Dbm">
                                <rect key="frame" x="115" y="307" width="90" height="30"/>
                                <state key="normal" title="Log in to app"/>
                                <connections>
                                    <action selector="loginUser:" destination="tSW-ok-ILH" eventType="touchUpInside" id="gBe-5p-dc8"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MBF-Bf-yFl">
                                <rect key="frame" x="108" y="345" width="105" height="30"/>
                                <state key="normal" title="Create account"/>
                                <connections>
                                    <segue destination="Bs5-M8-AXI" kind="show" identifier="createAccountSegue" id="JRT-PV-Zxl"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gd2-ea-5da">
                                <rect key="frame" x="131" y="347" width="58" height="30"/>
                                <state key="normal" title="Subbmit"/>
                                <connections>
                                    <action selector="subbmitButtonAction:" destination="Bs5-M8-AXI" eventType="touchUpInside" id="vrc-TJ-s9f"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
