/* 
  Localizable.strings
  SampleProject

  Created by Jakub Krystek on 10.12.2016.
  Copyright © 2016 Jakub Krystek. All rights reserved.
*/

"EMPTY_ALLERT_TITLE" = "Warning!";
"EMPTY_ALLERT_MESSAGE" = "The text fields can not be empty";
"EMPTY_ALLERT_DISSMIS_BUTTON_TITLE" = "OK";

"PASSWORD_NOT_MATCH_ALLERT_TITLE" = "Warning!";
"PASSWORD_NOT_MATCH_ALLERT_MESSAGE" = "Passwords are not the same";
"PASSWORD_NOT_MATCH_ALLERT_DISSMIS_BUTTON_TITLE" = "OK";

"ACCOUNT_EXIST_ALLERT_TITLE" = "Warning!";
"ACCOUNT_EXIST_ALLERT_MESSAGE" = "The specified account already exists";
"ACCOUNT_EXIST_ALLERT_DISSMIS_BUTTON_TITLE" = "OK";

"CREATE_ACCOUNT_ERROR_ALLERT_TITLE" = "Warning!";
"CREATE_ACCOUNT_ERROR_ALLERT_MESSAGE" = "An error occurred while setting up your account: %@";
"CREATE_ACCOUNT_ERROR_ALLERT_DISSMIS_BUTTON_TITLE" = "OK";



"SUCESS_CREATE_ACCOUNT_ALLERT_TITLE" = "Success!";
"SUCESS_CREATE_ACCOUNT_ALLERT_MESSAGE" = "Registration was successful";
"SUCESS_CREATE_ACCOUNT_ALLERT_DISMIS_BUTTON" = "OK";


"VALIDATION_ACCOUNT_DATA_ERROR_ALERT_VIEW_TITLE" = "Warning!";
"VALIDATION_ACCOUNT_DATA_ERROR_ALERT_VIEW_MESSAGE" = "Login or password is incorrect";
"VALIDATION_ACCOUNT_DATA_ERROR_ALERT_VIEW_DISSMIS_BUTON" = "OK";
